<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterBandActivity">

    <EditText
        android:id="@+id/band_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/BandUsername" />

    <EditText
        android:id="@+id/band_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/band_username"
        android:layout_marginTop="40dp"
        android:hint="@string/BandName" />


    <EditText
        android:id="@+id/band_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/band_name"
        android:layout_marginTop="40dp"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/band_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/band_password"
        android:layout_marginTop="40dp"
        android:hint="@string/RetypePassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/band_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/band_repassword"
        android:layout_marginTop="40dp"
        android:text="@string/signUp" />

    <Button
        android:id="@+id/band_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/band_register"
        android:layout_marginTop="40dp"
        android:text="@string/ExistingBand" />

</RelativeLayout>