<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/tv_login_accountTypeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/LoginOrRegister"
        android:textAlignment="center"
        android:textSize="34sp" />

    <RadioGroup
        android:id="@+id/login_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_accountTypeMessage"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/login_radio_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="checkButton"
            android:text="@string/Admin" />

        <RadioButton
            android:id="@+id/login_radio_band"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="checkButton"
            android:text="@string/Band" />

        <RadioButton
            android:id="@+id/login_radio_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkButton"
            android:text="@string/Customer" />


    </RadioGroup>


    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_radio_group"
        android:layout_marginTop="50dp"
        android:hint="@string/UserName" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="50dp"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="50dp"
        android:text="@string/SignIn" />

</RelativeLayout>