<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <TextView
        android:id="@+id/tv_admin_addEventMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/NewEventText"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_admin_addEventMessage"
        android:layout_marginTop="40dp"
        android:hint="@string/EventLocation" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_location"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="8dp"
        android:hint= "@string/EventDate"
        android:textSize="19sp"/>

    <EditText
        android:id="@+id/event_ticketAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_date"
        android:layout_marginTop="40dp"
        android:hint="@string/EventTicketAmount" />

    <Button
        android:id="@+id/event_createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_ticketAmount"
        android:layout_marginTop="40dp"
        android:text="@string/CreateEvent" />


</RelativeLayout>