<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHomeActivity">

    <TextView
        android:id="@+id/tv_admin_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:text="@string/WelcomeAdmin"
        android:textSize="34sp" />

    <Button
        android:id="@+id/button_admin_add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_admin_home"
        android:layout_marginTop="30dp"
        android:text="@string/AddNewEvent" />


    <Button
        android:id="@+id/button_admin_show_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_admin_add_event"
        android:layout_marginTop="30dp"
        android:text="@string/ShowEvents" />


    <ListView
        android:id="@+id/lv_admin_eventList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_admin_show_events" />


</RelativeLayout>