<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerHomeActivity">

    <TextView
        android:id="@+id/tv_customer_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/Customer"
        android:textAlignment="center"
        android:textSize="34sp" />

    <Button
        android:id="@+id/button_customer_buy_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_customer_home"
        android:layout_marginTop="30dp"
        android:text="@string/BuyTickets" />

    <Button
        android:id="@+id/button_customer_see_my_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_customer_buy_ticket"
        android:layout_marginTop="30dp"
        android:text="@string/SeeMyTickets" />

    <ListView
        android:id="@+id/lv_customer_List"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_customer_see_my_tickets" />
</RelativeLayout>